--- a/src/asciidraw/src/locales/en.yaml
+++ b/src/asciidraw/src/locales/en.yaml
@@ -34,6 +34,12 @@ components:
       dialog:
         title: "Project Name"
         description: "Here you can change the name of the project."
+    duplicate:
+      tooltip: "Duplicate Project"
+      dialog:
+        title: "Duplicate Project"
+        description: "This will duplicate your project so you can make changes without problems."
+        action: "Duplicate"
     list-link:
       tooltip: "See all your Projects"
   download-project:
