--- a/src/asciidraw/src/locales/de.yaml
+++ b/src/asciidraw/src/locales/de.yaml
@@ -20,7 +20,13 @@ components:
     mode:
       light: "Hell"
       dark: "Dunkel"
-      system: "System"
+      auto: "System"
+      bubblegumPop: "Bubblegum Pop"
+      steampunkCogs: "Steampunk Cogs"
+      vintageVinyl: "Vintage Vinyl"
+      mistyHarbor: "Misty Harbor"
+      zenGarden: "Zen Garden"
+      winter: "Winter"
   project-list:
     new:
       tooltip: "Neues Projekt"
