added light-mode version of themes

--- a/src/asciidraw/src/locales/de.yaml
+++ b/src/asciidraw/src/locales/de.yaml
@@ -21,12 +21,18 @@ components:
       light: "Hell"
       dark: "Dunkel"
       auto: "System"
-      bubblegumPop: "Bubblegum Pop"
-      steampunkCogs: "Steampunk Cogs"
-      vintageVinyl: "Vintage Vinyl"
-      mistyHarbor: "Misty Harbor"
-      zenGarden: "Zen Garden"
-      winter: "Winter"
+      lightBubblegumPop: "Bubblegum Pop"
+      darkBubblegumPop: "Bubblegum Pop"
+      lightSteampunkCogs: "Steampunk Cogs"
+      darkSteampunkCogs: "Steampunk Cogs"
+      lightVintageVinyl: "Vintage Vinyl"
+      darkVintageVinyl: "Vintage Vinyl"
+      lightMistyHarbor: "Misty Harbor"
+      darkMistyHarbor: "Misty Harbor"
+      lightZenGarden: "Zen Garden"
+      darkZenGarden: "Zen Garden"
+      lightWinter: "Winter"
+      darkWinter: "Winter"
   project-list:
     new:
       tooltip: "Neues Projekt"
