added translations for locale codes

--- a/src/asciidraw/src/locales/en.yaml
+++ b/src/asciidraw/src/locales/en.yaml
@@ -7,6 +7,9 @@ layout:
     docs: "Documentation"
     about: "About Us"
     github: "GitHub"
+locale:
+  de: "Deutsch"
+  en: "English"
 dialog-common:
   cancel: "Cancel"
   close: "Close"
