added text-alignment to label

--- a/src/asciidraw/src/locales/de.yaml
+++ b/src/asciidraw/src/locales/de.yaml
@@ -240,6 +240,8 @@ actions:
         label: "Text"
       block:
         label: "Block"
+      alignment:
+        label: "Textausrichtung"
       fit-to-content: "An Inhalt anpassen"
   group:
     display-name: "Gruppe"
