--- a/src/asciidraw/src/locales/en.yaml
+++ b/src/asciidraw/src/locales/en.yaml
@@ -244,6 +244,8 @@ actions:
         label: "Text"
       block:
         label: "Block"
+      alignment:
+        label: "Text Alignment"
       fit-to-content: "Fit to Content"
   group:
     display-name: "Group"
