added second example (orm), and fixed cpu-architecture.json

--- a/src/asciidraw/src/locales/de.yaml
+++ b/src/asciidraw/src/locales/de.yaml
@@ -100,6 +100,7 @@ example-projects:
   title: "Beispiel Projekte"
   names:
     cpu-architecture: "CPU Architektur"
+    orm: "Object Relational Mapping (ORM)"
   actions:
     load: "Beispiel Laden"
 app-init:
