improved ThemeToggle.vue with better support for docs-styles

--- a/src/asciidraw/src/locales/en.yaml
+++ b/src/asciidraw/src/locales/en.yaml
@@ -21,21 +21,21 @@ components:
   theme-toggle:
     tooltip: "Controls the color-scheme of the site"
     mode:
+      auto: "System"
       light: "Light"
       dark: "Dark"
-      auto: "System"
-      lightBubblegumPop: "Bubblegum Pop"
-      darkBubblegumPop: "Bubblegum Pop"
-      lightSteampunkCogs: "Steampunk Cogs"
-      darkSteampunkCogs: "Steampunk Cogs"
-      lightVintageVinyl: "Vintage Vinyl"
-      darkVintageVinyl: "Vintage Vinyl"
-      lightMistyHarbor: "Misty Harbor"
-      darkMistyHarbor: "Misty Harbor"
-      lightZenGarden: "Zen Garden"
-      darkZenGarden: "Zen Garden"
-      lightWinter: "Winter"
-      darkWinter: "Winter"
+      light-bubblegum-pop: "Bubblegum Pop"
+      dark-bubblegum-pop: "Bubblegum Pop"
+      light-steampunk-cogs: "Steampunk Cogs"
+      dark-steampunk-cogs: "Steampunk Cogs"
+      light-vintage-vinyl: "Vintage Vinyl"
+      dark-vintage-vinyl: "Vintage Vinyl"
+      light-misty-harbor: "Misty Harbor"
+      dark-misty-harbor: "Misty Harbor"
+      light-zen-garden: "Zen Garden"
+      dark-zen-garden: "Zen Garden"
+      light-winter: "Winter"
+      dark-winter: "Winter"
   project-list:
     new:
       tooltip: "New Project"
