added missing translations for the CommandPopup.vue and code reformat

--- a/src/asciidraw/src/locales/de.yaml
+++ b/src/asciidraw/src/locales/de.yaml
@@ -72,6 +72,9 @@ components:
     next: "Weiter"
     finish: "Tour beenden"
     see-also: "Siehe auch"
+  command-popup:
+    no-results: "Keine Ergebnisse gefunden."
+    filter-placeholder: "Geben Sie einen Befehl ein oder suchen Sie..."
 home:
   dev-notice: "Hinweis: Diese App befindet sich in der Entwicklung"
   draw: "Zeichne Etwas"
