--- a/src/asciidraw/src/locales/en.yaml
+++ b/src/asciidraw/src/locales/en.yaml
@@ -304,8 +304,8 @@ actions:
     edit:
       text:
         label: "Text"
-      block:
-        label: "Block"
+      block-rendering:
+        label: "Block Rendering"
       alignment:
         label: "Text Alignment"
       fit-to-content: "Fit to Content"
