added recent commands to the CommandPopup.vue

--- a/src/asciidraw/src/locales/de.yaml
+++ b/src/asciidraw/src/locales/de.yaml
@@ -334,6 +334,7 @@ actions:
           block1: "Block"
           block2: "Gestreift"
 commands:
+  recent-commands: "Letzte Befehle"
   navigation:
     popup-label: "Navigation"
     home: "Gehe zur Homepage"
